# simple-file-manifest-rs

./: Cargo.toml
