[package]
name = "simple-file-manifest"
version = "0.11.0-pre"
authors = ["Gregory Szorc <gregory.szorc@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Interact with lists of files through a storage-agnostic interface"
keywords = ["package"]
homepage = "https://github.com/indygreg/simple-file-manifest-rs"
repository = "https://github.com/indygreg/simple-file-manifest-rs.git"

[dev-dependencies]
tempfile = "3.2"
